disable button next khi đã click 1 lần

--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -1873,9 +1873,9 @@
     </button>
   </div>
   <div>
-    <button type="button" name="next" class="next draft-button" (click)="next('save-draft')">{{'btn.save-draft' |
+    <button [disabled]="isButtonDisabled" type="button" name="next" class="next draft-button" (click)="next('save-draft')">{{'btn.save-draft' |
       translate }}</button>
-    <button (click)="next('save-step')" type="button" name="next" class="next action-button pull-right">{{'btn.next' |
+    <button [disabled]="isButtonDisabled" (click)="next('save-step')" type="button" name="next" class="next action-button pull-right">{{'btn.next' |
       translate }}</button>
   </div>
 </div>
