--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="signature-container" id="export-html2" style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
+<div class="signature-container" id="export-html2" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div class="signature-content" style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
@@ -106,7 +106,7 @@
   </div>
 </div>
 
-<div class="signature-container" id="export-html-pki" style="min-height: 80px; display: flex; font-size: 9px; background-color: white;">
+<div class="signature-container" id="export-html-pki" style="min-height: 80px; display: flex; font-size: 9px;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
     <div style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
