--- a/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.html
@@ -12,22 +12,22 @@
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-list>
-        <tr *ngIf="list.status=='1'">
-          <td>
+        <tr *ngIf="list.status=='1'" >
+          <td class="popup_cert">
             <input type="radio" name="confirm-radio-consider" [value]="list" [(ngModel)]="selectedCert" name="status"
               style="margin-left: 20px;">
           </td>
-          <td>
+          <td class="popup_cert">
             <span class="text_webmobile">Ký hiệu: </span>{{list.keystoreSerialNumber}}
           </td>
-          <td>
+          <td class="popup_cert">
             <span class="text_webmobile">Chủ thể: </span>{{getValueByKey(list.certInformation, "CN")}}
           </td>
-          <td>
-            <span class="text_webmobile">MST/CCCD:</span> {{getValueByKey(list.certInformation, "UID")}}
+          <td class="popup_cert">
+            <span class="text_webmobile">MST/CCCD: </span> {{getValueByKey(list.certInformation, "UID")}}
           </td>
-          <td>
-            <span class="text_webmobile">Ngày hết hạn:</span> {{list.keystoreDateEnd | date:'dd/MM/yyyy HH:mm'}}
+          <td class="popup_cert">
+            <span class="text_webmobile">Ngày hết hạn: </span> {{list.keystoreDateEnd | date:'dd/MM/yyyy HH:mm'}}
           </td>
         </tr>
       </ng-template>
