--- a/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.scss
@@ -281,6 +281,12 @@
     color: #106DB6;
   }
 }
+#table td, #table th {
+  @media only screen and (max-width: 820px) {
+  padding: 5px;
+  }
+}
+
 .popup_cert{
   @media only screen and (max-width: 820px) {
     justify-content: flex-start !important;
