--- a/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/confirm-contract-batch/confirm-contract-batch.component.html
@@ -96,9 +96,10 @@
              [id]="d.id"
              style="z-index: -1;"
              #itemElement
-             
              [ngClass]="changeColorDrag(null, d)"
-             [ngStyle]="changePosition(d)">
+             [ngStyle]="changePosition(d)"
+             *ngIf="d.type==2 || d.type==3 || (d.type!==2 && d.type!==3 && d.value)"
+             >
           <div *ngIf="d.sign_unit != 'text' && d.sign_unit != 'so_tai_lieu'" class="name-sig-img-daky">{{(d.name && !d.value) ? d.name : ''}}</div>
           <app-sign-contract  [datas]="datasBatch" [sign]="d"></app-sign-contract>
         </div>
