--- a/src/app/main/digital-certificate/digital-certificate.component.html
+++ b/src/app/main/digital-certificate/digital-certificate.component.html
@@ -1,18 +1,18 @@
-<div *ngIf="QLDSCTS_01 || QLDSCTS_02 || QLDSCTS_03 || QLDSCTS_04" class="container-fluid">
+<div *ngIf="isQLDSCTS_01 || isQLDSCTS_02 || isQLDSCTS_03 || isQLDSCTS_04" class="container-fluid">
   <div class="row">
-    <div class="col-md-3" *ngIf="QLDSCTS_04">
+    <div class="col-md-3" *ngIf="isQLDSCTS_04">
       <div>{{'notation' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="serial_number" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3" *ngIf="QLDSCTS_04">
+    <div class="col-md-3" *ngIf="isQLDSCTS_04">
       <div>{{'subject' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="subject" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3" *ngIf="QLDSCTS_04">
+    <div class="col-md-3" *ngIf="isQLDSCTS_04">
       <div>{{'contract.status' | translate}}</div>
       <div>
           <p-treeSelect placeholder="{{'all' | translate}}"
@@ -23,8 +23,8 @@
     </div>
 
     <div class="col-md-3 btn_search">
-      <button *ngIf="QLDSCTS_04" class="btn btn-lg btn-block btn_submit" (click)="getFirstPageSearchData()">{{'btn.search' | translate }}</button>
-        <button *ngIf="QLDSCTS_01" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
+      <button *ngIf="isQLDSCTS_04" class="btn btn-lg btn-block btn_submit" (click)="getFirstPageSearchData()">{{'btn.search' | translate }}</button>
+        <button *ngIf="isQLDSCTS_01" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
     </div>
   </div>
 
@@ -48,8 +48,8 @@
               <td *ngIf="list.status == 1">{{'unit.active' | translate}}</td>
               <td *ngIf="list.status != 1">{{'unit.inactive' | translate}}</td>
               <td style="text-align: center; ">
-                <i class="fa" ngbTooltip="{{'report.detail.contract' | translate}}" [ngClass]="'fa-eye'" style="color: #106DB6;width: 25%;cursor: pointer; margin-right: 5px" (click)="detailUser(list.id)"></i>
-                <img *ngIf="QLDSCTS_02 && QLDSCTS_03" ngbTooltip="{{'contract.edit' | translate}}" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
+                <img *ngIf="isQLDSCTS_03" src="../../../assets/img/icon_eyes.svg" ngbTooltip="{{'report.detail.contract' | translate}}" width="20px" style="cursor: pointer;" (click)="detailUser(list.id)"/>
+                <img *ngIf="isQLDSCTS_02" ngbTooltip="{{'contract.edit' | translate}}" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUser(list.id)" style="cursor: pointer;"/>
               </td>
           </tr>
       </ng-template>
@@ -63,7 +63,7 @@
   </div>
 
 </div>
-<div *ngIf="!QLDSCTS_01 && !QLDSCTS_02 && !QLDSCTS_03 && !QLDSCTS_04">
+<div *ngIf="!isQLDSCTS_01 && !isQLDSCTS_02 && !isQLDSCTS_03 && !isQLDSCTS_04">
   {{'no.role' | translate}}
 </div>
 
