Fix giao diện hiển thị khi nhập tên người dùng dài hơn ô ký (step3)

--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -731,4 +731,11 @@
   margin-left: 5px
 }
 
+.text-ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: inherit;
+}
+
 
