--- a/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/cert-dialog-sign/cert-dialog-sign.component.html
@@ -1,8 +1,13 @@
 <div class="container-fluid">
-  <div class="header">
+  <div class="header" *ngIf="!this.mobile">
     <h3 class="label-header">{{this.datas.title | translate}}</h3>
   </div>
-  <div class="row" style="padding-top: 20px;">
+
+  <div class="header" *ngIf="this.mobile">
+    <h3 class="label-header">{{'sign_cert_title' | translate}}</h3>
+  </div>
+
+  <div class="row" style="padding-top: 20px;" *ngIf="!this.mobile">
     <p-table id="table" [value]="list">
       <ng-template pTemplate="header" let-columns>
         <tr>
@@ -12,7 +17,7 @@
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-list>
-        <tr *ngIf="list.status=='1'" >
+        <tr *ngIf="list.status=='1'">
           <td class="popup_cert">
             <input type="radio" name="confirm-radio-consider" [value]="list" [(ngModel)]="selectedCert" name="status"
               style="margin-left: 20px;">
@@ -32,6 +37,31 @@
         </tr>
       </ng-template>
     </p-table>
+  </div>
+  <div class="row" style="padding-top: 20px;" *ngIf="this.mobile">
+    <div style="width: 90%; height: auto; border: 1px solid #106DB6; margin: auto;padding: 0px !important;">
+      <div class="header" style="display: flex;height: 30px; color: #106DB6; background-color: #d0e4fc;">
+        <div style="width: 25%">Chọn</div>
+        <div>Thông tin</div>
+      </div>
+
+      <div class="item" style="border-top: 1px solid #106DB6; display: flex" *ngFor="let lists of list">
+        <div class="radioChoose">
+          <input type="radio" name="confirm-radio-consider" [value]="lists" [(ngModel)]="selectedCert" name="status"
+            style="margin-left: 40%;">
+        </div>
+        <div style="width: 75%;">
+          <div>ký hiệu: <span style="word-wrap: break-word;">{{lists.keystoreSerialNumber}}</span></div>
+
+          <div>MST/CCCD: <span>{{getValue(lists.certInformation, "UID")}}</span></div>
+
+          <div>Chủ thể: <span style="word-wrap: break-word;">{{getValueByKey(lists.certInformation, "CN")}}</span></div>
+
+          <div>Ngày hết hạn: <span>{{lists.keystoreDateEnd | date:'dd/MM/yyyy HH:mm'}}</span></div>
+
+        </div>
+      </div>
+    </div>
   </div>
   <div class="footer-btn" style="padding-top: 20px;">
     <button (click)="handleCancel()">{{"btn.cancel" | translate}}</button>
