map gốc toạ độ góc trên bên trái

--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -51,7 +51,7 @@ textarea::after {
 
 .text-sign-not-template-text {
   position: absolute;
-  bottom: -3px;
+  top: 0px;
   left: 0px;
   outline: none;
   color: #106DB6;
