--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.scss
@@ -55,6 +55,7 @@ textarea::after {
   left: 0px;
   outline: none;
   color: #106DB6;
+  text-align: left;
 }
 
 .text-sign-not-template-contract-code {
