Fix hiển thị selectBox/ô ký đã gán tên khi nhập tên người ký text dài

--- a/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-template/shared/model/sample-contract/sample-contract.component.scss
@@ -709,3 +709,10 @@
 //         }
 //       }
 // }
+
+.text-ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: inherit;
+}
