--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -130,7 +130,7 @@
                 <!-- New version -->
                 <div class="resize-drag not-out-drop" [id]="d.id" style="z-index: -1" #itemElement
                 (click)="getSignSelect(d)" [ngClass]="changeColorDrag(null,true)" [ngStyle]="(d.sign_unit != 'chu_ky_anh' && d.sign_unit != 'chu_ky_so') ? changePosition(d) : changePositionSignature(d)">
-                    <div *ngIf="d.name" class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
+                    <div *ngIf="d.name" class="name-sig-img-daky text-ellipsis">{{d.name ? d.name : ''}}</div>
                     <div class="sig-img-daky" (click)="onCancel($event, d)">
                         <img src="assets/img/clear.svg" alt="">
                         <img src="assets/img/border-clear.svg" alt="">
